--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+    compile 'uk.com.robust-it:cloning:1.9.6'
+    compile "com.github.xaguzman:pathfinding:0.2.6"
     compile "com.badlogicgames.ashley:ashley:1.7.0"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
