--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ repositories {
 
 dependencies {
     compile "com.badlogicgames.ashley:ashley:1.7.0"
+    compile "uk.com.robust-it:cloning:1.9.6"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
